<resources>
    <string name="app_name">Nature Destinations</string>
    <string name="title_activity_maps">Map</string>
    <string name="temporaryText">null</string>
    <string name="reviewsHeaderString">Reviews</string>
    <string name="minusSign">-</string>
    <string name="dropPinString">Drop Pin</string>
    <string name="title_activity_create_pin">CreatePinActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_create_pin2">MainActivity</string>
    <string name="nameEntryString">Name</string>
    <string name="descriptionEntryString">Description</string>
    <string name="takePhotosString">Take Photos</string>
    <string name="categoriesEntryString">Categories</string>
    <string name="category0String">Beach/Water</string>
    <string name="category1String">Nature</string>
    <string name="category2String">Camping</string>
    <string name="category3String">Fishing</string>
    <string name="category4String">Hiking</string>
    <string name="returnToMapString">Return to Map</string>
    <string name="chooseFromGalleryString">Add Photo From Gallery</string>
    <string name="nameEntryHintString">Enter the name of the location you are pinning.</string>
    <string name="ratingEntryString">Rating (0–5)</string>
    <string name="reviewEntryString">Write a short review of the location.</string>
    <string name="filterString">F</string>
    <string name="submitFilterString">Filter</string>
    <string name="pinImageDescription">Pin image</string>
    <string name="emptyString" />
    <string name="sString">S</string>
    <string name="signInString">Sign In</string>
    <string name="usernameString">Username</string>
    <string name="createAccountLinkString">Create an account</string>
    <string name="invalidMessageString">Invalid username/email or password.</string>
    <string name="passwordString">Password</string>
    <string name="createAccountString">Create Account</string>
    <string name="firstNameString">First Name</string>
    <string name="lastNameString">Last Name</string>
    <string name="emailString">Email</string>
    <string name="createString">Create</string>
    <string name="usernameExistsString">Username already exists.</string>
    <string name="addRatingReviewString">Add Rating or Review</string>
    <string name="ratingString">Rating</string>
    <string name="ratingRange">0 - 5</string>
    <string name="reviewString">Review</string>
    <string name="submitString">Submit</string>
    <string name="seeMoreReviews">See more reviews.</string>
    <string name="see_more_photos">See more photos.</string>
    <string name="passwordRequired">Please enter a password.</string>
    <string name="searchString">Search</string>

</resources>