<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity">

    <ScrollView
        android:id="@+id/loginScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loginLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            tools:ignore="ScrollViewSize">

            <TextView
                android:id="@+id/createAccountText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="75dp"
                android:gravity="center_horizontal"
                android:text="@string/createAccountString"
                android:textColor="@color/black"
                android:textSize="30sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/firstNameEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:layout_marginBottom="96dp"
                android:autofillHints="First Name"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/createAccountText"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/lastNameEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="96dp"
                android:autofillHints="Last Name"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textPersonName"
                android:hint="@string/lastNameString"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/firstNameEntry"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/newRatingEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="96dp"
                android:autofillHints="Username"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textPersonName"
                android:hint="@string/usernameString"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lastNameEntry"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/usernameExistsText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/usernameExistsString"
                android:textColor="@color/design_default_color_error"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/newRatingEntry"
                app:layout_constraintTop_toBottomOf="@id/newRatingEntry"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/passwordEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="96dp"
                android:autofillHints="Password"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textPassword"
                android:hint="@string/passwordString"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/newRatingEntry"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/emailEntry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="96dp"
                android:autofillHints="Email"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textEmailAddress"
                android:hint="@string/emailString"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordEntry"
                app:layout_constraintVertical_bias="0.0"
                tools:ignore="LabelFor,TextFields" />

            <Button
                android:id="@+id/createAccountButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:layout_marginBottom="50dp"
                android:text="@string/createString"
                app:backgroundTint="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/emailEntry"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/passwordRequiredText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/passwordRequired"
                android:textColor="@color/design_default_color_error"
                app:layout_constraintStart_toStartOf="@+id/passwordEntry"
                app:layout_constraintTop_toBottomOf="@+id/passwordEntry" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>